TooManyPerms v1.0.2 Source Code
- Removed old Main.java main class
- Removed old config.yml file
- Added TooManyPerms.java main class
- Added Permissions.java enum
- Added messages.yml file
- Added permissions.yml file
- Added punishments.yml file
- Added Developer API
- Added UnfairOpDetectedEvent
- Added UnfairPermsDetectedEvent
- Added UnfairGroupDetectedEvent
- Improved Server Performance (70%)
- Reduced AsyncRepeatingTask Speed (from 20L to 30L)
- Added PermissionsEx dependency
- Added PermissionsEx Groups Support
- Added "/tmp groupcheck <group>" sub-command
- Updated from 1.0.1-ALPHA to 1.0.2-BETA
- Added 1.7x-1.12x Support
- Improved Stability

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,33 @@
 name: TooManyPerms
 author: Alex_Delpier02
-version: 1.0.1-ALPHA
-main: me.alex.toomanyperms.Main
+website: github.com/AlexDelpier02/TooManyPerms/
+version: 1.0.2-BETA
+main: it.mycraft.toomanyperms.TooManyPerms
+depend: [PermissionsEx]
 commands:
-  tmp:
+  tmp: 
+permissions:
+  tmp.admin:
+    default: op
+    children:
+      tmp.use: true
+      tmp.reload: true
+      tmp.check: true
+      tmp.opcheck: true
+      tmp.groupcheck: true
+  tmp.checks:
+    default: op
+    children:
+      tmp.check: true
+      tmp.opcheck: true
+      tmp.groupcheck: true
+  tmp.use: 
+    default: false
+  tmp.reload: 
+    default: false
+  tmp.check:
+    default: false
+  tmp.opcheck:
+    default: false
+  tmp.groupcheck: 
+    default: false
