--- a/punishments.yml
+++ b/punishments.yml
@@ -1,5 +1,5 @@
 #
-#     TooManyPerms v1.0.2-BETA
+#     TooManyPerms v1.0.3-ALPHA
 #      Coded by Alex_Delpier02
 #   "No matter what, NSSJ all life"
 #
