--- a/resources/permissions.yml
+++ b/resources/permissions.yml
@@ -1,7 +1,6 @@
 #
-#     TooManyPerms v1.0.3-ALPHA
+#       TooManyPerms v1.0.4
 #      Coded by Alex_Delpier02
-#   "No matter what, NSSJ all life"
 #
 # github.com/AlexDelpier02/TooManyPerms
 #
