Update v1.0.6 - Added ConfigManager class - Added GNU License - Added "Excluded Nicknames" list in permissions.yml - Added Jitpack support (TooManyPerms API available now with Maven) - Updated pom.xml

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,8 +1,8 @@
 #
-#       TooManyPerms v1.0.5
-#      Coded by Alex_Delpier02
+#       TooManyPerms v1.0.6
+#      Coded by AlbeMiglio
 #
-# github.com/AlexDelpier02/TooManyPerms
+# github.com/AlbeMiglio/TooManyPerms
 #
 Messages:
   Use-Prefix: true
