--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>it.mycraft.toomanyperms</groupId>
     <artifactId>TooManyPerms</artifactId>
-    <version>1.0.6</version>
+    <version>1.0.7</version>
     <build>
         <plugins>
             <plugin>
@@ -35,6 +35,10 @@
             <url>https://jitpack.io</url>
         </repository>
         <repository>
+            <id>codemc-repo</id>
+            <url>https://repo.codemc.io/repository/maven-public/</url>
+        </repository>
+        <repository>
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
@@ -56,6 +60,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>it.mycraft</groupId>
+            <artifactId>PowerLib</artifactId>
+            <version>1.1.7</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
